# MManiST

./: .gitignore  HGCNAE_utils.py  LICENSE  README.md  env.yaml  run_MManiST.py  train.py  utils.py
GraphZoo/: README.md  pyproject.toml
GraphZoo/graphzoo/: config.py
GraphZoo/graphzoo/dataloader/: dataloader.py  download.py
GraphZoo/graphzoo/layers/: hyp_att_layers.py  hyp_layers.py  layers.py
GraphZoo/graphzoo/manifolds/: euclidean.py  hyperboloid.py  poincare.py
GraphZoo/graphzoo/models/: base_models.py  decoders.py  encoders.py
GraphZoo/graphzoo/optimizers/: radam.py  rsgd.py
GraphZoo/graphzoo/trainers/: train.py
GraphZoo/graphzoo/utils/: eval_utils.py  mask_utils.py
GraphZoo/tutorials/nodeclassification/: hgcn.ipynb
MManiST/: layers.py  loss_func.py  model.py  train.py
